# PTA-ciencia-de-dados-equipe-peu

./: .gitignore  README.md  agentos.py  playground.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: agente_produtos.py
app/knowledge/: base_pdfs.py
app/tools/: data_query.py
data/: itens_pedidos.csv  pedidos.csv  produtos.csv  vendedores.csv
