[project]
name = "pta-ciencia-de-dados-equipe-peu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno==1.8.2",
    "google-genai>=1.52.0",
    "tavily-python>=0.7.13",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "aiosqlite",
    "pypdf",
    "lancedb",
]
