[project]
name = "pta-ciencia-de-dados-equipe-peu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "agno>=2.0.0",
    "google-genai>=1.52.0",
    "tavily-python>=0.7.13",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "aiosqlite",
    "pypdf",
    "lancedb",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "agno*"]
exclude = ["tmp*", "data*"]